# examples/simple/internal/api/example/example.go
@@ -2,16 +2,6 @@ package example
 
 import "github.com/codfrm/cago/server/mux"
 
-// LoginRequest 需要登录的接口
-type LoginRequest struct {
-	mux.Meta `path:"/example" method:"POST"`
-}
-
-// LoginResponse 需要登录的接口
-type LoginResponse struct {
-	Username string `json:"username"`
-}
-
 // PingRequest ping
 type PingRequest struct {
 	mux.Meta `path:"/example/ping" method:"GET"`
