# examples/simple/internal/controller/example_ctr/example.go
@@ -17,11 +17,6 @@ func NewExample() *Example {
 	return &Example{}
 }
 
-// Login 需要登录的接口
-func (e *Example) Login(ctx context.Context, req *api.LoginRequest) (*api.LoginResponse, error) {
-	return example_svc.Example().Login(ctx, req)
-}
-
 // Ping ping
 func (e *Example) Ping(ctx context.Context, req *api.PingRequest) (*api.PingResponse, error) {
 	return example_svc.Example().Ping(ctx, req)
