# examples/simple/internal/controller/user_ctr/login.go
@@ -22,7 +22,7 @@ func (l *Login) Register(ctx context.Context, req *api.RegisterRequest) (*api.Re
 }
 
 // Login 登录
-func (l *Login) Login(ctx *gin.Context, req *api.LoginRequest) (*api.LoginResponse, error) {
+func (l *Login) Login(ctx *gin.Context, req *api.LoginRequest) error {
 	return user_svc.Login().Login(ctx, req)
 }
 
@@ -31,6 +31,12 @@ func (l *Login) Logout(ctx *gin.Context, req *api.LogoutRequest) (*api.LogoutRes
 	return user_svc.Login().Logout(ctx, req)
 }
 
-func (l *Login) Middleware() gin.HandlerFunc {
-	return user_svc.Login().Middleware()
+// CurrentUser 当前登录用户
+func (l *Login) CurrentUser(ctx context.Context, req *api.CurrentUserRequest) (*api.CurrentUserResponse, error) {
+	return user_svc.Login().CurrentUser(ctx, req)
+}
+
+// RefreshToken 刷新token
+func (l *Login) RefreshToken(ctx *gin.Context, req *api.RefreshTokenRequest) error {
+	return user_svc.Login().RefreshToken(ctx, req)
 }
